<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="UMCLOSE">退出</string>
    <string name="app_name">喝喝云商</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="exit_title">温馨提示</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home_name">首页</string>
    <string name="tab_shoppingcart_name">购物车</string>
    <string name="tab_salon_name">沙龙</string>
    <string name="tab_oroder_name">订单</string>
    <string name="tab_usercenter_name">我的</string>
    <string name="copytright">喝喝科技</string>
    <string name="app_tip">提示</string>
    <string name="prepayid">订单号:</string>
    <string name="getting_prepayid">获取预付订单号</string>
    <string name="wx_pay_string_order">订单编号:</string>
    <string name="orderFactory">厂商:</string>
    <string name="orderInfo">商品信息:</string>
    <string name="orderTime">订单时间:</string>
    <string name="isPay">去支付</string>
    <string name="proorder">拼单商品</string>
    <string name="delivery">配送费</string>
    <string name="ordersinfo">订单信息</string>
    <string name="instance">立即报名</string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <string name="demand_wine">酒类需求</string>
    <string name="my_client">我的客户</string>
    <string name="my_salon">我的沙龙</string>
    <string name="my_info">认证信息</string>
    <string name="add_manager">地址管理</string>
    <string name="answer_back">问题反馈</string>
    <string name="hehe_tel">喝喝客服</string>
    <string name="hehe_demand">酒水需求</string>
    <string name="hehe_businesscard">名片管理</string>
    <string name="setting">设置</string>
    <string name="nick">昵称</string>
    <string name="not_auth">未认证</string>
    <string name="not_pay">待付款</string>
    <string name="is_pay">受理中</string>
    <string name="is_send">备货中</string>
    <string name="get_goods">待收货</string>
    <string name="agent">代理商身份验证</string>
    <string name="myclientlist">客户通讯录</string>
    <string name="all_statue">全部</string>
    <string name="success_statue">已完成</string>
    <string name="cancle_statue">已取消</string>
    <string name="weixingpay">微信(最高支持5万)</string>
    <string name="to_pay">提交订单</string>
    <string name="weixin_pay">微信</string>
    <string name="jd_pay">京东</string>
    <string name="hb_pay">喝币支付</string>
    <string name="lineoff_pay">货到付款</string>
    <string name="zfb_pay">支付宝</string>
    <string name="shop_name">公司名称</string>
    <string name="shop_add">公司地址</string>
    <string name="legal_person">法人姓名</string>
    <string name="id_card">法人身份证号</string>
    <string name="shop_id">营业执照号</string>
    <string name="link_man">联系人姓名</string>
    <string name="link_tel">联系方式</string>
    <string name="commit_verify">提交认证</string>
    <string name="add_address">新增收货地址</string>
    <string name="setting_default">选择收货地址</string>
    <string name="setting_guanli">管理收货地址</string>
    <string name="my_address">设为默认地址</string>
    <string name="manager">管理</string>
    <string name="complete">完成</string>
    <string name="consignee">收货人姓名</string>
    <string name="tel_link">手机号码</string>
    <string name="destace">所在区域</string>
    <string name="stree">所在街道</string>
    <string name="detail_add">详细地址</string>
    <string name="postcode">邮编编码</string>
    <string name="text">邮</string>
    <string name="login_password">密码</string>
    <string name="no_account">还没有账号?</string>
    <string name="go_register">去注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="postcode_text">验证码</string>
    <string name="send_postcode">获取验证码</string>
    <string name="tel">手机号</string>
    <string name="tel_authcode">验证码</string>
    <string name="setting_pwd">设置密码(6-20位字母数字组合)</string>
    <string name="register_yaoqingma">邀请码</string>
    <string name="register_yaoqingma_hint">邀请码</string>
    <string name="commit_pwd">确认密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="hint_tel">请填写注册手机号</string>
    <string name="hint_postcode">请输入验证码</string>
    <string name="hint_pwd">6-20位数字字母组合</string>
    <string name="hint_pwd_login">密码</string>
    <string name="hint_pwd_next">请再次填写密码</string>
    <string name="hint_register">注册</string>
    <string name="next_step">下一步</string>
    <string name="notice_phone_null">请输入手机号</string>
    <string name="notice_phone_login">手机号</string>
    <string name="notice_company_hint">请输入单位名称</string>
    <string name="hint_money">请输入提现金额</string>
    <string name="notice_phone">请输入正确的手机号</string>
    <string name="service_phone">010-85782811</string>
    <string name="price">价格</string>
    <string name="favorable">品牌</string>
    <string name="ranking">快结束</string>
    <string name="flavor">香型:</string>
    <string name="stock">原料:</string>
    <string name="degree">度数:</string>
    <string name="net_weight">净含量:</string>
    <string name="store_up">贮藏条件:</string>
    <string name="wine_factory">酒厂:</string>
    <string name="already">可订购:</string>
    <string name="total_wine">货品量:</string>
    <string name="total_left">剩余量:</string>
    <string name="buy_lest">最小起批量:</string>
    <string name="current_price">当前价</string>
    <string name="add_shopcart">加入购物车</string>
    <string name="commit_retroaction">提交</string>
    <string name="notice_retroaction">请您填写问题反馈后提交</string>
    <string name="notice_tel">请您填写手机号</string>
    <string name="notice_userName">请您填写用户名</string>
    <string name="notice_correct_phone">请填写正确的手机号</string>
    <string name="notice_correct_yqm">请填写邀请码</string>
    <string name="notice_password">请您填写密码</string>
    <string name="login_success">登录成功</string>
    <string name="loginout_success">退出成功</string>
    <string name="notice_code">输入验证码</string>
    <string name="notice_password_next">请您填写确认密码</string>
    <string name="password_same">两次密码输入不一致</string>
    <string name="pwd_agreed">密码一样</string>
    <string name="pwd_one_length">密码长度应为6-20位</string>
    <string name="loading">加载中</string>
    <string name="commit_shop_fail">您的审核失败,请重新提交审核信息！</string>
    <string name="commit_update_ing">您的资料已提交成功，请耐心等候审核！</string>
    <string name="commit_success_ing">审核已受理，请耐心等候！</string>
    <string name="commit_success">恭喜您，审核已经通过！</string>
    <string name="commit_fail">提交信息失败</string>
    <string name="getcode_success">获取验证码成功</string>
    <string name="getinfo_fail">获取个人信息失败</string>
    <string name="register_success">注册成功</string>
    <!-- 下拉刷新中相关文字 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <!-- ListView底部加载更多提示的文字 -->
    <string name="loading_moreValues">加载更多</string>
    <string name="hasloading_moreValues">加载中...</string>
    <string name="login_out">退出登录</string>
    <string name="shop_null1">公司环境照片没有上传</string>
    <string name="shop_null2">法人身份证照片没有上传</string>
    <string name="shop_null3">营业执照照片没有上传</string>
    <string name="shop_null4">组织机构代码照片没有上传</string>
    <string name="shop_null5">税务登记证照片没有上传</string>
    <string name="shop_null">您的店铺名称没有填写</string>
    <string name="add_out_null">您的店铺地址没有填写</string>
    <string name="name_out">您的法人姓名没有填写</string>
    <string name="idcard_out">您的身份证没有填写</string>
    <string name="add_out">您的公司详细地址没有填写</string>
    <string name="license_out">您的营业执照号没有填写</string>
    <string name="linkname_out">您的联系人信息没有填写</string>
    <string name="tel_out">您的联系电话没有填写</string>
    <string name="salon_name">姓名</string>
    <string name="salon_linktel">联系方式</string>
    <string name="salon_company">所属公司</string>
    <string name="salon_position">工作职位</string>
    <string name="salon_weixing">微信</string>
    <string name="custom_add">添加信息成功</string>
    <string name="custom_update">修改信息成功</string>
    <string name="custom_list_fail">获取下游用户列表失败</string>
    <string name="custom_adduser">添加</string>
    <string name="custom_delete">删除</string>
    <string name="custom_delete_success">删除成功</string>
    <string name="network_error">网络连接异常,请稍后重试！</string>
    <string name="goods_price">商品金额</string>
    <string name="goods_price_dong">(动态):</string>
    <string name="goods_send_price">配送费:</string>
    <string name="goods_total_price">订单总金额:</string>
    <string name="subscription">已支付订金:</string>
    <string name="goods_payed">订单已支付</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="county">县   /  区</string>
    <string name="dastance">详细地址</string>
    <string name="commit_address_success">提交成功</string>
    <string name="pay_overrun">超过最高支付限额:提交订单后,请移步网页端用网页支付网址</string>
    <string name="pay_overrun_address">网址</string>
    <string name="pay_overrun_http">http://www.hehe.com</string>
    <string name="add_text">公司详细地址输入错误,请您重新填写！</string>
    <string name="faren_text">法人姓名输入错误,请您重新填写！</string>
    <string name="lianxiren_text">联系人姓名输入错误,请您重新填写！</string>
    <string name="renxiren_tel">联系人电话输入错误,请您重新填写！</string>
    <string name="shenfenzheng_text">身份证输入错误,请您重新填写！</string>
    <string name="exit_message">再按一次返回键退出喝喝云商</string>
    <string name="cancle">取消</string>
    <string name="ok">确定</string>
    
    <string name="drink_not_empty_brand">请您选择酒的品牌</string>
    <string name="drink_not_empty_name">请您填写酒类名称</string>
    <string name="drink_not_empty_degress">请您填写度数</string>
    <string name="drink_not_empty_winnnum">请您填写数量</string>
    <string name="drink_not_empty_unit">请您选择单位</string>
    <string name="drink_not_empty_buy">请您填写求购价格</string>
    <string name="drink_not_empty_distance">请您先选中配送区域</string>
    <string name="drink_not_empty_starttime">请您选择开始时间</string>
    <string name="drink_not_empty_endtime">请您选择结束时间</string>
    
    <string name="drink_info">酒讯</string>
    
    <string name="production_type">品类</string>
    <string name="production_area">产地</string>
    <string name="my_balance">我的余额:</string>
    <string name="my_coupon">我的优惠券:</string>
    <string name="my_hehemoney">我的喝币:</string>
    <string name="my_points">我的积分:</string>
    <string name="st_tx">提现</string>
    <string name="st_tx_jl">提现记录</string>
    <string name="get_money">提现金额</string>
    
    <string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
	<string name="exchange_tv">兑换</string>
	<string name="tv_noinvoice">暂不开发票</string>
	<string name="tv_points">暂无积分</string>
	<string name="tv_hehemoney">未使用喝币</string>
	<string name="hehe_deal">已完整阅读《喝喝云商用户协议》</string>
	<string name="hehe_xy">同意&lt;&lt;喝币服务条款>></string>

    <string name="pull_to_refresh">下拉可以刷新</string>  
    <string name="release_to_refresh">释放立即刷新</string>  
    <string name="refreshing">正在刷新…</string>  
    <string name="not_updated_yet">暂未更新过</string>  
    <string name="updated_at">上次更新于%1$s前</string>  
    <string name="updated_just_now">刚刚更新</string>  
    <string name="time_error">时间有问题</string>  
    <string name="search_tip">搜索内容</string>
</resources>